--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
         </p>
 
         <div>
-            <p class="h1" align="center" style="padding-top: 2%; padding-bottom: 2%;">Welcom User</p>
+            <p class="h1" align="center" style="padding-top: 2%; padding-bottom: 2%;">Welcome User</p>
         </div>
         <div class="alert alert-warning" role="alert" align="center" style="padding-top: 2%; padding-bottom: 2%;font-size: larger;">
             {{warning}}
