--- a/src/app/setnewpassword/setnewpassword.component.html
+++ b/src/app/setnewpassword/setnewpassword.component.html
@@ -3,18 +3,19 @@
 </div>
 <div align="center">
     <p style="font-size: xx-large; padding-top: 5%;">Set Your New Password</p>
+  
     <table style="margin-top: 5em;">
         <tr>
             <td>New Password</td>
-            <td style="padding-left: 10%;"><input type="password" [(ngModel)]="pass1" placeholder="Set your Password"></td>
+            <td style="padding-left: 10%;"><input type="password" [(ngModel)]="pass1" placeholder="Set your Password" minlength="4"></td>
         </tr><br>
         <tr>
             <td>Confirm Password</td>
-            <td style="padding-left: 10%;"><input type="password" [(ngModel)]="pass2" placeholder="Confirm your Password"></td>
+            <td style="padding-left: 10%;"><input type="password" [(ngModel)]="pass2" placeholder="Confirm your Password" min="4"></td>
         </tr><br><br>
     </table>
     <div>
-        <button type="button" class="btn btn-primary btn-sm" (click)="clicked()">Submit</button>
+        <button type="button" class="btn btn-primary btn-sm" (click)="clicked()" >Submit</button>
     </div><br>
     <div style="color: green;">{{temp}}</div>
 </div>
