--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,28 +1,30 @@
-<div style="background-color: lightblue; padding-bottom: 17%;">
+<div style="background-color: lightblue; padding-bottom: 3%;">
     <div style="background-color: blue;padding-right: 78%;">
         <div align="left" style="padding-top: 2%; padding-left: 5%;">
-            <img src="assets\Bank Icon.jpg " width="250" height="80" alt="Logo ">
+            <img src="assets\Bank Icon.jpg " width="250" height="80" alt="Logo">
         </div>
     </div>
     <div style="background-color: white; padding-top: 2%; padding-bottom: 2%;">
-        <h1 align="center">Welcome To DSBA Bank</h1>
-        <h4 align=" center " class="display-4 " style="font-family: Georgia, 'Times New Roman', Times, serif; ">Bank Anytime, Bank Anywhere</h4>
+        <h1 align="center" style="font-family: Arial, Helvetica, sans-serif">Welcome To DBSA Bank</h1>
+        <h3 align=" center " class="display-4 " style="font-size: larger; font-family: 'Times New Roman'">Bank Anytime, Bank Anywhere</h3>
     </div>
-
-    <div class="split right " align="center" style="padding-top: 3%;">
+    <img style="padding-left: 5%; padding-top: 3%;" align="left" src="assets\slogan.png" width="480" height="300" alt="slogan">
+    <img style="padding-left: 2%; padding-top: 3%;" align="left" src="assets\slogan1.png" width="450" height="300" alt="slogan">
+    <div class="split right " align="right" style="padding-top: 3%; padding-right: 3%;">
         <div class="top container " style="padding-top: 1%;">
-            <a class="btn btn-default" routerLink="register" style="font-size: large;">New User? Register</a>
+            <a class="btn btn-light" routerLink="register" style="width: 5cm;font-size: large;">New User? Register</a>
         </div>
         <div class="middle container " style="padding-top: 1%;">
-            <a class="btn btn-default" routerLink="netregister" style="font-size: large;">Netbanking Register</a>
+            <a class="btn btn-light" routerLink="netregister" style="width: 5cm; font-size: large;">Netbanking Register</a>
         </div>
         <div class="middle container " style="padding-top: 1%;">
-            <a class="btn btn-default" routerLink="adminlogin" style="font-size: large;">Admin Login</a>
+            <a class="btn btn-light" routerLink="adminlogin" style="width: 5cm;font-size: large;">Admin Login</a>
         </div>
         <div class="bottom container " style="padding-top: 1%;">
-            <a class="btn btn-default" routerLink="login" style="font-size: large;">Login here</a>
+            <a class="btn btn-light" routerLink="login" style="width: 5cm;font-size: large;">Login here</a>
         </div>
         <div class="bottom container " style="padding-top: 1%;">
-            <a class="btn btn-default" routerLink="status" style="font-size: large;">Account Status</a>
+            <a class="btn btn-light" routerLink="status" style="width: 5cm;font-size: large;">Account Status</a>
         </div>
     </div>
+</div>
